# Kavach-Saathi

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.backend  EXPLAIN.md  NOTICE  README.md  RUNBOOK.md  SETUP.md  THIRD_PARTY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
assets/mock/: provenance.json
data/seed/: addresses.json  buyers.json  orders.json  products.json  provenance.json  returns.json  reviews.json  sellers.json
docs/: AGENTS.md  API.md  architecture.md  openapi.json
docs/diagrams/: system-design.mmd  website-flow.mmd
migrations/versions/: 2d10c82f454f_add_reviews_unique_constraint.py  5b0ede91dc5b_extend_schema_for_agents_and_orders.py  64b0d502aaec_add_vishwas_samvad_and_operational_.py  6a2f37d9c841_add_phone_verified_to_users.py  8f59e280fa22_add_persistent_buyer_address_fields.py  a41d7a62c9e4_add_scale_query_indexes.py  b4c9f2a710de_add_review_order_link.py  b72f184ad630_add_postgres_catalogue_search.py  c65ff7497d27_add_review_validation_audit_fields.py  c7d3e91a62bf_add_persistent_workflow_runs.py  c824f7ce913a_add_flexible_specs_and_wishlist.py  cd1bec29c627_change_reviews_unique_constraint_to_.py  d3a91fe58c21_add_product_id_to_returns.py  (+1 more)
scripts/: backup_local.ps1  generate_seed_data.py  refresh_local.ps1  verify_backup.ps1
tests/: conftest.py  test_admin_api.py  test_api_workflows.py  test_auth.py  test_catalogue_agent_integration.py  test_catalogue_generation.py  test_catalogue_providers.py  test_characterization.py  test_commerce_api.py  test_data_and_digipin.py  test_delivery_confirmation.py  test_email_otp.py  test_infrastructure.py  test_openapi.py  test_operational.py  test_reasoning_cascade.py  test_saathi_features.py  test_seller_api.py  test_size_translator.py  test_spec_enforcer.py  test_trust_jobs.py  test_uploads.py  test_voice_qa.py
web/: .gitignore  ATTRIBUTION.md  Dockerfile.prod  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.js
(+91 files in other folders)
