[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kavach-saathi-agents"
version = "0.1.0"
description = "Eight-agent orchestration backend for the Kavach Saathi commerce demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.1,<2",
  "alembic>=1.13,<2",
  "anthropic>=0.40,<1",
  "bcrypt>=4.2,<5",
  "boto3>=1.35,<2",
  "diffusers>=0.31,<1",
  "fastapi>=0.115,<1",
  "google-cloud-vision>=3.8,<4",
  "google-genai>=1.0,<2",
  "gradio-client>=1.6,<2",
  "groq>=0.18,<1",
  "httpx>=0.27,<1",
  "indic-nlp-library>=0.92,<1",
  "langgraph>=0.2,<1",
  "mangum>=0.19,<1",
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.10,<5",
  "pillow>=11,<13",
  "pinecone>=5.0,<6",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "pyjwt>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "razorpay>=1.4,<2",
  "redis>=5.1,<6",
  "safetensors>=0.4,<1",
  "sentence-transformers>=3.0,<4",
  "setuptools>=75,<81",
  "sqlalchemy>=2.0,<3",
  "transformers>=4.51,<5",
  "twilio>=9.0,<10",
  "torch>=2.5,<3",
  "torchvision>=0.20,<1",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kavach_saathi"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
# Alembic-generated migration files use its own boilerplate template (typing.Union,
# unsorted stdlib/third-party import order) that predates this project's ruff ruleset
# -- they're generated code, not hand-written, so hold them to Alembic's own
# conventions rather than repeatedly hand-fixing each new migration's header just to
# satisfy UP035/UP007/I001.
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
